@@ -3,6 +3,7 @@ version 7.6.3
 ~~~~~~~~~~~~~~~~
 
 * fixed PEM import zipimporter error message - was more of a warning, supressed if not using pyopenssl
+* fixed a harvester not found exception in harvester
 
 ~~~~~~~~~~~~~~~~
 7.6.2
